# toolkit-v2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .releaserc.json  ABA8AD5BB.json  CHANGELOG.md  LICENSE  README.md  bo_commentary_serialized.json  en_commentary_serialized.json  metadata.json  pyproject.toml  requirements-dev.txt  serialized_segmentation.json  setup.cfg  source_annotation.json  target_segmentation_annotation.json  temp.json  test.py  zh.json
.github/workflows/: CI.yml  publish.yml
docs/: LICENSE.md  api-references.md  background.md  conf.py  getting-started.md  index.html  index.rst  pecha.md  requirements.txt  tutorials.md  usage.md
docs/Parsers/: chonjuk-parser.md
src/openpecha/: bdrc_utils.py  blupdate.py  catalog.py  config.py  exceptions.py  github_utils.py  google_api.py  ids.py  pipeline.py  storages.py  utils.py
src/openpecha/alignment/: __init__.py  alignment.py  commentary_transfer.py  metadata.py  translation_transfer.py
src/openpecha/alignment/ann_transfer/: __init__.py  commentary.py  translation.py
src/openpecha/alignment/parsers/: plaintext.py
src/openpecha/alignment/pecha/: pecha.py
src/openpecha/alignment/serializers/: __init__.py  json.py  pecha_db.py  simple_text_commentary.py  simple_text_translation.py  translation.py
src/openpecha/buda/: api.py  chunker.py
src/openpecha/core/: annotation.py  annotations.py  layer.py  metadata.py  pecha.py
src/openpecha/pecha/: __init__.py  annotation.py  annotations.py  blupdate.py  coordinate_normalisation.py  layer.py  metadata.py  pecha_types.py
src/openpecha/pecha/parsers/: __init__.py  chonjuk.py  dharamanexus.py  durchen.py  edition.py  formatter.py  google_doc.py  layers.py  parser_utils.py  pedurma.py  plaintext.py
src/openpecha/pecha/serializers/: __init__.py  commentary.py  json.py  json_serializer.py  pecha_db.py  translation.py  updated_opf_serializer.py  utils.py
tests/: test_ids.py  test_pipeline.py  test_storages.py  test_utils.py
tests/alignment/ann_transfer/commentary/: test_commentary_ann_transfer.py
tests/alignment/ann_transfer/translation/: test_coordinate_normalisation.py  test_translation_ann_transfer.py
tests/alignment/commentary_transfer/: test_commentary_transfer.py
tests/alignment/commentary_transfer/data/: expected_serialized_commentary.json  expected_serialized_commentary_with_display.json
tests/alignment/parsers/plaintext/: test_plaintext.py
tests/alignment/read/: test_read_alignment.py
tests/alignment/serializers/json/: test_json_serializer.py
tests/alignment/serializers/pecha_db/: test_pecha_db.py
tests/alignment/serializers/simple_text_commentary/: test_simple_text_commentary.py
tests/alignment/serializers/simple_text_translation/: test_simple_text_translation.py
tests/alignment/serializers/translation/: test_translation_serializer.py
tests/alignment/translation_transfer/: test_translation_transfer.py
tests/alignment/translation_transfer/data/: expected_serialized_translation_with_display.json  serialized_translation.json
tests/buda/: test_buda_api.py
tests/pecha/: __init__.py  test_annotation.py  test_annotation_id.py  test_blupdate.py  test_create_pecha.py  test_get_span_text.py  test_layer.py  test_pecha.py  test_pecha_types.py  test_pedurma.py  test_update.py
tests/pecha/coordinate_normalisation/: test_coordinate_normalisation.py
tests/pecha/coordinate_normalisation/commentary/: test_commentary_ann_transfer.py
tests/pecha/coordinate_normalisation/data/: expected_pecha_display_segment_alignment.json
tests/pecha/coordinate_normalisation/translation/: test_coordinate_normalisation.py
tests/pecha/data/: ITEST001.json  ITEST001_alignment.json
tests/pecha/merge/: test_pecha_merge.py
tests/pecha/metadata/: test_metadata.py
tests/pecha/pecha/: test_pecha.py
tests/pecha/read/: test_pecha_read.py
tests/pecha/serializers/: test_serializers_utils.py
tests/pecha/write/: test_pecha.py
(+700 files in other folders)
