[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openpecha"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "OpenPecha toolkit version 2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic >= 2.7.4",
  "stam ==  0.9.0",
  "diff-match-patch==20230430",
  "PyGithub >= 2.3.0",
  "pyewts == 0.2.0",
  "toml >= 0.10.2",
  "GitPython>=3.1.0, <4.0",
  "botok >= 0.8.12",
  "subprocess.run == 0.0.8",
  "python-docx >= 1.1.2",
  "bo-sent-tokenizer @ git+https://github.com/OpenPecha/bo_sent_tokenizer.git",
  "fast_antx @ git+https://github.com/OpenPecha/fast-antx.git",
  "pecha_org_tools @ git+https://github.com/OpenPecha/pecha_org_tools.git",
  "google-auth-httplib2 >= 0.2.0",
  "google-api-python-client >= 2.156.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
