[tool.poetry]
name = "openpecha2"
version = "0.1.0"
description = "OpenPecha toolkit version 2"
authors = [
    "Ta4tsering <ta3tsering@gmail.com>",
    "Tenzin Tsundue <sundue@esukhia.org>",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=2.7.4"
stam = "0.9.0"
diff-match-patch = "20230430"
PyGithub = ">=2.3.0"
pyewts = "0.2.0"
toml = ">=0.10.2"
GitPython = ">=3.1.0,<4.0"
botok = ">=0.8.12"
subprocess-run = "0.0.8"
python-docx = ">=1.1.2"
bo-sent-tokenizer = { git = "https://github.com/OpenPecha/bo_sent_tokenizer.git" }
fast-antx = { git = "https://github.com/OpenPecha/fast-antx.git" }
pecha-org-tools = { git = "https://github.com/OpenPecha/pecha_org_tools.git" }
google-auth-httplib2 = ">=0.2.0"
google-api-python-client = ">=2.156.0"
docx2python = "3.3.0"
boto3 = ">=1.34.0"
botocore = ">=1.34.0"
rdflib = ">=5.0.0"
fonttools = { version = ">=4.37.3", extras = ["unicode"] }
beautifulsoup4 = ">=4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"

[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
version_source = "tag"
commit_message = "chore(release): version {version}"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

